--- a/car/templates/car_list.html
+++ b/car/templates/car_list.html
@@ -2,6 +2,6 @@
 <h1>List of Cars</h1>
 
 {% for car in cars %}
-    <p>{{ car.make }} {{ car.model }} ({{ car.year }})</p>
+    <p>ID: {{ car.id }}. Make: {{ car.make }}, Model: {{ car.model }} Year: ({{ car.year }})</p>
 {% endfor %}
 </center>
