--- a/animal/templates/animal_list.html
+++ b/animal/templates/animal_list.html
@@ -2,6 +2,6 @@
 <h1>List of Animals</h1>
 
 {% for animal in animals %}
-    <p>{{ animal.name }} ({{ animal.species }}, {{ animal.age }})</p>
+    <p>ID: {{ animal.id }}. Name: {{ animal.name }}, Species: ({{ animal.species }}, Age: {{ animal.age }})</p>
 {% endfor %}
 </center>
